added the css to the html and added some folders to make things a bit more organized [issue 2]

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/index.css">
     <title></title>
   </head>
   <body>
     <header>
-
     </header>
 
-    <footer>
+    <section class="top-row"></section>
+    <section class="top-row"></section>
+    <section class="top-row"></section>
+    <section class="bottom-row"></section>
+    <section class="bottom-row"></section>
 
+    <footer>
     </footer>
 
   </body>
