--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
   </head>
   <body>
     <header>
+      <button class="toggle" type="button" name="button">SEE WHAT HAPPENS</button>
     </header>
-
-    <section class="top-row"></section>
-    <section class="top-row"></section>
-    <section class="top-row"></section>
+    <section class="top-row">
+      <div class="blue-box"></div>
+    </section>
+    <section class="top-row">
+      <div class="blue-box"></div>
+    </section>
+    <section class="top-row">
+      <div class="blue-box"></div>
+    </section>
     <section class="bottom-row"></section>
     <section class="bottom-row"></section>
 
     <footer>
     </footer>
 
+
+
+
+
+
+    <script src="jquery-3.2.0.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
